--- a/public/tournamentsDialog.html
+++ b/public/tournamentsDialog.html
@@ -10,7 +10,7 @@
 		<div class="col-md-12">
 			<div class="form-group">
 				<label>Rolle</label>
-				<select name="role" class="form-control" ng-options="role as role.label for role in roles track by role.id" ng-model="selected" ng-change="setRole()"></select>
+				<select name="role" class="form-control" style="height:auto;" ng-options="role as role.label for role in roles track by role.id" ng-model="selected" ng-change="setRole()"></select>
 			</div>
 		</div>
 	</div>
