chrome autofill fixed

--- a/public/signup.html
+++ b/public/signup.html
@@ -20,7 +20,7 @@
 				<label>Email</label>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-					<input type="email" pattern="[^ @]*@[^ @]*" ng-model="user.email" placeholder="Enter your email" class="form-control" name="email" required="true">
+					<input type="email" name="email" pattern="[^ @]*@[^ @]*" ng-model="user.email" placeholder="Enter your email" class="form-control" name="email" required="true">
 				</div>
 			</div>
 			<div class="form-group">
