--- a/public/vorstand.html
+++ b/public/vorstand.html
@@ -43,140 +43,144 @@
 
 			<h3><span class="fa fa-comments"></span> Neues Turnier</h3>
 
-			<div class="row">
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label>Name</label>
-						<input type="text" class="form-control" ng-model="newTournament.name">
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="form-group">						
+			<form ng-submit="createTournament()">
+				<div class="row">
+					<div class="col-sm-4">
 						<div class="form-group">
-							<label>Ort</label>
-							<input type="text" class="form-control" ng-model="newTournament.ort">
+							<label>Name</label>
+							<input type="text" class="form-control" ng-model="newTournament.name" required="true">
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="form-group">						
+							<div class="form-group">
+								<label>Ort</label>
+								<input type="text" class="form-control" ng-model="newTournament.ort">
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-4">
+						<div class="form-group">						
+							<div class="form-group">
+								<label>Unterkunft</label>
+								<input type="text" class="form-control" ng-model="newTournament.accommodation">
+							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-sm-4">
-					<div class="form-group">						
+				<div class="row">
+					<div class="col-sm-4">
 						<div class="form-group">
-							<label>Unterkunft</label>
-							<input type="text" class="form-control" ng-model="newTournament.accommodation">
+							<label>Startdatum</label>
+							<input type="date" class="form-control" ng-model="newTournament.startdate" />
+						</div>
+					</div>
+					<div class="col-sm-4">						
+						<div class="form-group">
+							<label>Enddatum</label>
+							<input type="date" class="form-control" ng-model="newTournament.enddate" />
+						</div>
+					</div>
+					<div class="col-sm-4">	
+						<div class="form-group">
+							<label>Deadline zur Anmeldung</label>
+							<input type="date" class="form-control" ng-model="newTournament.deadline" />
+							<!-- <div class="input-group date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input4" data-link-format="yyyy-mm-dd">
+								<input class="form-control" size="16" type="text" value="" readonly >
+								<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+							</div>
+							<input type="hidden" id="dtp_input4" value="" ng-model="newTournament.deadline" /> -->
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label>Startdatum</label>
-						<input type="date" class="form-control" ng-model="newTournament.startdate" />
-					</div>
-				</div>
-				<div class="col-sm-4">						
-					<div class="form-group">
-						<label>Enddatum</label>
-						<input type="date" class="form-control" ng-model="newTournament.enddate" />
-					</div>
-				</div>
-				<div class="col-sm-4">	
-					<div class="form-group">
-						<label>Deadline zur Anmeldung</label>
-						<input type="date" class="form-control" ng-model="newTournament.deadline" />
-						<!-- <div class="input-group date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input4" data-link-format="yyyy-mm-dd">
-							<input class="form-control" size="16" type="text" value="" readonly >
-							<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
+				<div class="row">
+					<div class="col-sm-3">
+						<div class="form-group">
+							<label>Format</label>
+							<input type="text" class="form-control" ng-model="newTournament.format">
 						</div>
-						<input type="hidden" id="dtp_input4" value="" ng-model="newTournament.deadline" /> -->
+					</div>
+					<div class="col-sm-3">
+						<div class="form-group">
+							<label>Liga</label>
+							<input type="text" class="form-control" ng-model="newTournament.league">
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="form-group">
+							<label for="language">Sprache</label>
+							<select id="language" class="form-control" style="height:auto;" ng-model="newTournament.language">
+								<option value=""></option>
+								<option value="de">deutsch</option>
+								<option value="en">englisch</option>
+								<option value="other">other</option>
+							</select>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div class="">
+							<label>Wert im BDU Ranking</label>
+							<select class="form-control" style="height:auto;" ng-model="newTournament.rankingvalue">
+								<option value=""></option>
+								<option value="2">2 - Einstiegsturnier</option>
+								<option value="3">3 - DDL Turniere (DDL-Mindestgröße = <12 Teams)</option>
+								<option value="4">4 - DDL Turniere (>DDL-Mindestgröße = <12 Teams)</option>
+								<option value="5">5 - Regionalmeisterschaften</option>
+								<option value="6">6 - ZEIT DEBATTEN; Nat. eng. IV´s & Opens ESL; Masters Cup</option>
+								<option value="7">7 - Nat. eng. IV´s & Opens open break/Int. IV´s & Opens ESL; Einladungsturnier</option>
+								<option value="8">8 - Int. IV´s & Opens open break</option>
+								<option value="9">9 - DDM; Euros ESL</option>
+								<option value="10">10 - Worlds ESL</option>
+								<option value="11">11 - Oxford; Cambridge IV open break</option>
+								<option value="12">12 - Euros; Worlds Open-Break</option>
+							</select>
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label>Format</label>
-						<input type="text" class="form-control" ng-model="newTournament.format">
+				<div class="row">
+					<div class="col-sm-3">
+						<div class="form-group">
+							<label>Preis Speaker</label>
+							<input type="number" class="form-control" ng-model="newTournament.speakerprice">
+						</div>
+					</div>
+					<div class="col-sm-3">						
+						<div class="form-group">
+							<label>Preis Judge</label>
+							<input type="number" class="form-control" ng-model="newTournament.judgeprice">
+						</div>
+					</div>
+					<div class="col-sm-3">						
+						<div class="form-group">
+							<label>Teamspots</label>
+							<input type="number" class="form-control" ng-model="newTournament.teamspots">
+						</div>
+					</div>
+					<div class="col-sm-3">						
+						<div class="form-group">
+							<label>Judgespots</label>
+							<input type="number" class="form-control" ng-model="newTournament.judgespots">
+						</div>
 					</div>
 				</div>
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label>Liga</label>
-						<input type="text" class="form-control" ng-model="newTournament.league">
+				<div class="row">
+					<div class="col-sm-4">
+						<div class="form-group">
+							<label>Link</label>
+							<input type="text" class="form-control" ng-model="newTournament.link">
+						</div>
+					</div>
+					<div class="col-sm-8">						
+						<div class="form-group">
+							<label>Comments</label>
+							<input type="text" class="form-control" ng-model="newTournament.comments">
+						</div>
 					</div>
 				</div>
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label for="language">Sprache</label>
-						<select id="language" class="form-control" style="height:auto;" ng-model="newTournament.language">
-							<option value=""></option>
-							<option value="de">deutsch</option>
-							<option value="en">englisch</option>
-							<option value="other">other</option>
-						</select>
-					</div>
-				</div>
-				<div class="col-sm-3">
-					<div class="">
-						<label>Wert im BDU Ranking</label>
-						<select class="form-control" style="height:auto;" ng-model="newTournament.rankingvalue">
-							<option value=""></option>
-							<option value="2">2 - Einstiegsturnier</option>
-							<option value="3">3 - DDL Turniere (DDL-Mindestgröße = <12 Teams)</option>
-							<option value="4">4 - DDL Turniere (>DDL-Mindestgröße = <12 Teams)</option>
-							<option value="5">5 - Regionalmeisterschaften</option>
-							<option value="6">6 - ZEIT DEBATTEN; Nat. eng. IV´s & Opens ESL; Masters Cup</option>
-							<option value="7">7 - Nat. eng. IV´s & Opens open break/Int. IV´s & Opens ESL; Einladungsturnier</option>
-							<option value="8">8 - Int. IV´s & Opens open break</option>
-							<option value="9">9 - DDM; Euros ESL</option>
-							<option value="10">10 - Worlds ESL</option>
-							<option value="11">11 - Oxford; Cambridge IV open break</option>
-							<option value="12">12 - Euros; Worlds Open-Break</option>
-						</select>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-3">
-					<div class="form-group">
-						<label>Preis Speaker</label>
-						<input type="number" class="form-control" ng-model="newTournament.speakerprice">
-					</div>
-				</div>
-				<div class="col-sm-3">						
-					<div class="form-group">
-						<label>Preis Judge</label>
-						<input type="number" class="form-control" ng-model="newTournament.judgeprice">
-					</div>
-				</div>
-				<div class="col-sm-3">						
-					<div class="form-group">
-						<label>Teamspots</label>
-						<input type="number" class="form-control" ng-model="newTournament.teamspots">
-					</div>
-				</div>
-				<div class="col-sm-3">						
-					<div class="form-group">
-						<label>Judgespots</label>
-						<input type="number" class="form-control" ng-model="newTournament.judgespots">
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-sm-4">
-					<div class="form-group">
-						<label>Link</label>
-						<input type="text" class="form-control" ng-model="newTournament.link">
-					</div>
-				</div>
-				<div class="col-sm-8">						
-					<div class="form-group">
-						<label>Comments</label>
-						<input type="text" class="form-control" ng-model="newTournament.comments">
-					</div>
-				</div>
-			</div>
-			<button class="btn btn-lg btn-success pull-right" ng-click="submit()">Turnier erstellen</button>
+
+				<button type="submit" class="btn btn-lg btn-success pull-right">Turnier erstellen</button>
+			</form>
+
 		</div>
 		<div class="row">
 			<div class="col-sm-6 col-sm-offset-3">
