--- a/public/vorstand.html
+++ b/public/vorstand.html
@@ -48,14 +48,14 @@
 					<div class="col-sm-4">
 						<div class="form-group">
 							<label>Name</label>
-							<input type="text" class="form-control" ng-model="newTournament.name" required="true">
+							<input type="text" name="name" class="form-control" ng-model="newTournament.name" required="true">
 						</div>
 					</div>
 					<div class="col-sm-4">
 						<div class="form-group">						
 							<div class="form-group">
 								<label>Ort</label>
-								<input type="text" class="form-control" ng-model="newTournament.ort">
+								<input type="text" name="ort" class="form-control" ng-model="newTournament.ort">
 							</div>
 						</div>
 					</div>
@@ -63,7 +63,7 @@
 						<div class="form-group">						
 							<div class="form-group">
 								<label>Unterkunft</label>
-								<input type="text" class="form-control" ng-model="newTournament.accommodation">
+								<input type="text" name="accommodation" class="form-control" ng-model="newTournament.accommodation">
 							</div>
 						</div>
 					</div>
@@ -72,19 +72,19 @@
 					<div class="col-sm-4">
 						<div class="form-group">
 							<label>Startdatum</label>
-							<input type="date" class="form-control" ng-model="newTournament.startdate" />
+							<input type="date" name="startdate" class="form-control" ng-model="newTournament.startdate" />
 						</div>
 					</div>
 					<div class="col-sm-4">						
 						<div class="form-group">
 							<label>Enddatum</label>
-							<input type="date" class="form-control" ng-model="newTournament.enddate" />
+							<input type="date" name="enddate" class="form-control" ng-model="newTournament.enddate" />
 						</div>
 					</div>
 					<div class="col-sm-4">	
 						<div class="form-group">
 							<label>Deadline zur Anmeldung</label>
-							<input type="date" class="form-control" ng-model="newTournament.deadline" />
+							<input type="date" name="deadline" class="form-control" ng-model="newTournament.deadline" />
 							<!-- <div class="input-group date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input4" data-link-format="yyyy-mm-dd">
 								<input class="form-control" size="16" type="text" value="" readonly >
 								<span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
@@ -97,13 +97,13 @@
 					<div class="col-sm-3">
 						<div class="form-group">
 							<label>Format</label>
-							<input type="text" class="form-control" ng-model="newTournament.format">
+							<input type="text" name="format" class="form-control" ng-model="newTournament.format">
 						</div>
 					</div>
 					<div class="col-sm-3">
 						<div class="form-group">
 							<label>Liga</label>
-							<input type="text" class="form-control" ng-model="newTournament.league">
+							<input type="text" name="league" class="form-control" ng-model="newTournament.league">
 						</div>
 					</div>
 					<div class="col-sm-3">
@@ -141,25 +141,25 @@
 					<div class="col-sm-3">
 						<div class="form-group">
 							<label>Preis Speaker</label>
-							<input type="number" class="form-control" ng-model="newTournament.speakerprice">
+							<input type="number" name="speakerprice" class="form-control" ng-model="newTournament.speakerprice">
 						</div>
 					</div>
 					<div class="col-sm-3">						
 						<div class="form-group">
 							<label>Preis Judge</label>
-							<input type="number" class="form-control" ng-model="newTournament.judgeprice">
+							<input type="number" name="judgeprice" class="form-control" ng-model="newTournament.judgeprice">
 						</div>
 					</div>
 					<div class="col-sm-3">						
 						<div class="form-group">
 							<label>Teamspots</label>
-							<input type="number" class="form-control" ng-model="newTournament.teamspots">
+							<input type="number" name="teamspots" class="form-control" ng-model="newTournament.teamspots">
 						</div>
 					</div>
 					<div class="col-sm-3">						
 						<div class="form-group">
 							<label>Judgespots</label>
-							<input type="number" class="form-control" ng-model="newTournament.judgespots">
+							<input type="number" name="judgespots" class="form-control" ng-model="newTournament.judgespots">
 						</div>
 					</div>
 				</div>
@@ -167,13 +167,13 @@
 					<div class="col-sm-4">
 						<div class="form-group">
 							<label>Link</label>
-							<input type="text" class="form-control" ng-model="newTournament.link">
+							<input type="text" name="link" class="form-control" ng-model="newTournament.link">
 						</div>
 					</div>
 					<div class="col-sm-8">						
 						<div class="form-group">
 							<label>Comments</label>
-							<input type="text" class="form-control" ng-model="newTournament.comments">
+							<input type="text" name="comments" class="form-control" ng-model="newTournament.comments">
 						</div>
 					</div>
 				</div>
