added update tournament feature

--- a/public/forgot.html
+++ b/public/forgot.html
@@ -3,8 +3,8 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="intro-text">
-					<span class="name"><span class="glyphicon glyphicon-heart-empty"></span> You forgot your password?</span>
-					<h4>Hope you remember your email! We'll shoot you mail to reset your password</h4>
+					<span class="name"><span class="glyphicon glyphicon-heart-empty"></span> Forgot your password?</span>
+					<h4>Hope you remember your email! We'll shoot you a mail to reset your password</h4>
 					<h4>If you don't remember your email, please contact the Vorstand.</h4>
 				</div>
 			</div>
