changed toggle languages design

--- a/public/tournaments.html
+++ b/public/tournaments.html
@@ -25,7 +25,7 @@
 								<th>Place</th>
 								<th>Dates</th>
 								<th>Spots</th>
-								<th><button class="btn btn-warning" ng-click="toggle()">de / en</button></th>
+								<th><button class="btn btn-warning" ng-click="toggle()">{{toggleVal}}</button></th>
 							</tr>
 						</thead>
 						<tbody>
