minor changes to tournaments view

--- a/public/tournaments.html
+++ b/public/tournaments.html
@@ -109,7 +109,7 @@
 					</tr>
 						<th></th>
 						<td ng-show="showDetails && istVorstand">
-							<button class="btn btn-primary" ng-click="showUpdate = true">Edit</button>
+							<button class="btn btn-primary" ng-click="showUpdate = true; SuccessMessage = ''; ErrorMessage = ''">Edit</button>
 							<button class="btn btn-danger" ng-click="delete()">Delete</button>
 						</td>
 					</tr>
