--- a/public/vorstand.html
+++ b/public/vorstand.html
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="intro-text">
-					<span class="name"><span class="fa fa-group"></span> Vorstand</span>
+					<span class="name"><span class="glyphicon glyphicon-flash"></span> Vorstand</span>
 				</div>
 			</div>
 		</div>
