--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -10,34 +10,64 @@
 	</div>
 </header>
 
-<section id="tournament-info">
+<section>
 	<div class="col-sm-10 col-sm-offset-1">
-		<table class="table table-hover table-responsive">
+		<table class="table table-hover table-responsive table-overview">
 			<thead>
 				<tr>
-					<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('id')">Tournament ID</button></th>
-					<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('name')">Name</button></th>
-					<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('startdate')">Startdate</button></th>
-					<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('language')">Language</button></th>
-					<th class="col-md-6">Users</th>
+					<th></th>
+					<th class="hidden-xs"><button class="btn btn-info btn-sm" ng-click="sort('id')">Tournament ID</button></th>
+					<th><button class="btn btn-info btn-sm" ng-click="sort('name')">Name</button></th>
+					<th class="hidden-xs"><button class="btn btn-info btn-sm" ng-click="sort('startdate')">Startdate</button></th>
+					<th><button class="btn btn-info btn-sm" ng-click="sort('language')">Language</button></th>
+					<th>Users</th>
 				</tr>
 			</thead>
 			<tbody class="left-align">
 				<tr ng-repeat="tournaments in tournamentsusers">
-					<td><a class="text-primary" href="" ng-click="open(tournaments.id)">{{tournaments.id}}</a></td>
-					<td><a class="text-primary" href="" ng-click="open(tournaments.id)">{{tournaments.name}}</a></td>
-					<td><a class="text-primary" href="" ng-click="open(tournaments.id)">{{tournaments.startdate | date:'dd.MM.yyyy'}}</a></td>
-					<td><a class="text-primary" href="" ng-click="open(tournaments.id)">{{tournaments.language}}</a></td>
+					<td class="hidden-xs">
+						<button class="btn btn-default btn-sm" ng-click="open(tournaments.id)">
+							<span style="cursor: pointer; font-size: 1.45em;" class="glyphicon glyphicon-zoom-in"></span>
+						</button>
+					</td>
+					<td class="visible-xs">
+						<button class="btn btn-default btn-sm" ng-click="goToUsers(tournaments)">
+							<span style="cursor: pointer; font-size: 1.45em;" class="glyphicon glyphicon-zoom-in"></span>
+						</button>
+					</td>
+					<td class="hidden-xs">{{tournaments.id}}</a></td>
+					<td>{{tournaments.name}}</a></td>
+					<td class="hidden-xs">{{tournaments.startdate | date:'dd.MM.yyyy'}}</a></td>
+					<td>{{tournaments.language}}</a></td>
 					<td ng-hide="detailedTournament == tournaments.id">{{tournaments.users.length}}</td>
 					<td ng-show="detailedTournament == tournaments.id">
-						<span ng-repeat="users in tournaments.users">
-							<table class="table">
+						<table class="table">
+							<thead>
 								<tr>
-									<th class="col-md-2">Name:</th>
-									<td class="col-md-2">
-										<img style="height: 40px; width: 40px; border:1px solid gainsboro; border-radius: 50%;" class="img-hor" ng-src="/images/userPics/{{users.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/> 
+									<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('id')">User ID</button></th>
+									<th class="col-md-1"></th>
+									<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('name')">Name</button></th>
+									<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('role')">Role</button></th>
+									<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('teamname')">Teamname</button></th>
+									<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('attended')">Attended</button></th>
+								</tr>
+							</thead>
+							<tbody class="left-align">
+								<tr ng-repeat="users in tournaments.users">
+									<td class="text-center">{{users.id}}</td>
+									<td class="text-center">
+										<img style="height: 50px; width: 50px; border:1px solid gainsboro; border-radius: 50%;" class="img-hor" ng-src="/images/userPics/{{users.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
+									</td>
+									<td>
 										{{users.vorname}} {{users.name}}
 									</td>
+									<td>{{users.role}}</td>
+									<td>{{users.teamname}}</td>
+									<td ng-hide="users.attended == 1">
+										<span class="glyphicon glyphicon-remove"></span>
+										<button ng-show="users.id == user.id || istVorstand" class="btn btn-sm btn-primary" style="margin-left: 15px" ng-click="went(tournaments.id, users.id)">Went</button>
+									</td>
+									<td class="col-md-4" ng-show="users.attended == 1"><span class="glyphicon glyphicon-ok"></span></td>
 									<td ng-show="users.id == user.id || istVorstand" class="col-md-2">
 										<button ng-click="delete(tournaments.id, users.id)" class="btn btn-danger btn-sm">
 											<span class="glyphicon glyphicon-trash"> </span>
@@ -45,27 +75,51 @@
 										</button>
 									</td>
 								</tr>
-								<tr>
-									<th class="col-md-2">Role:</th>
-									<td>{{users.role}}</td>
-								</tr>
-								<tr ng-show="users.role == 'speaker'">
-									<th class="col-md-2">Teamname:</th>
-									<td>{{users.teamname}}</td>
-								</tr>
-								<tr>
-									<th class="col-md-2">Went:</th>
-									<td ng-hide="users.attended == 1">
-										<span class="glyphicon glyphicon-remove"></span>
-										<button ng-show="users.id == user.id || istVorstand" class="btn btn-sm btn-primary" style="margin-left: 15px" ng-click="went(tournaments.id, users.id)">Went</button>
-									</td>
-									<td ng-show="users.attended == 1"><span class="glyphicon glyphicon-ok"></span></td>
-								</tr>
-							</table>
-						</span>
+							</tbody>
+						</table>
 					</td>
 				</tr>
 			</tbody>
 		</table>
+
+		<!-- USER TABLE ONLY FOR MOBILE VIEW -->
+		<div id="users" class="visible-xs">
+			<table ng-show="showUsers" class="table table-hover table-responsive table-overview">
+				<thead>
+					<tr>
+						<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('id')">User ID</button></th>
+						<th class="col-md-1"></th>
+						<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('name')">Name</button></th>
+						<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('role')">Role</button></th>
+						<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('teamname')">Teamname</button></th>
+						<th class="col-md-1"><button class="btn btn-info btn-sm" ng-click="sort('attended')">Attended</button></th>
+					</tr>
+				</thead>
+				<tbody class="left-align">
+					<tr ng-repeat="users in overview_users">
+						<td class="text-center hidden-xs">{{users.id}}</td>
+						<td class="text-center">
+							<img style="height: 50px; width: 50px; border:1px solid gainsboro; border-radius: 50%;" class="img-hor" ng-src="/images/userPics/{{users.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
+						</td>
+						<td>
+							{{users.vorname}} {{users.name}}
+						</td>
+						<td>{{users.role}}</td>
+						<td>{{users.teamname}}</td>
+						<td ng-hide="users.attended == 1">
+							<span class="glyphicon glyphicon-remove"></span>
+							<button ng-show="users.id == user.id || istVorstand" class="btn btn-sm btn-primary" style="margin-left: 15px" ng-click="went(tournaments.id, users.id)">Went</button>
+						</td>
+						<td class="col-md-4" ng-show="users.attended == 1"><span class="glyphicon glyphicon-ok"></span></td>
+						<td ng-show="users.id == user.id || istVorstand" class="col-md-2">
+							<button ng-click="delete(tournaments.id, users.id)" class="btn btn-danger btn-sm">
+								<span class="glyphicon glyphicon-trash"> </span>
+								Delete
+							</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
 	</div>
 </section>
