--- a/public/vorstand.html
+++ b/public/vorstand.html
@@ -43,7 +43,7 @@
 
 			<h3><span class="fa fa-comments"></span> Neues Turnier</h3>
 
-			<form ng-submit="createTournament()">
+			<form ng-submit="submit()">
 				<div class="row">
 					<div class="col-sm-4">
 						<div class="form-group">
