got upload of user pics to BDU Server to work

--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -56,7 +56,7 @@
 								<tr ng-repeat="users in tournaments.users">
 									<td class="text-center">{{users.id}}</td>
 									<td class="text-center">
-										<img style="height: 50px; width: 50px; border:1px solid gainsboro; border-radius: 50%;" class="img-hor" ng-src="/images/userPics/{{users.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
+										<img style="height: 50px; width: 50px; border:1px solid gainsboro; border-radius: 50%;" class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{users.image}}" onerror="this.src='images/bdu_quad.png'" alt=""/>
 									</td>
 									<td>
 										{{users.vorname}} {{users.name}}
