--- a/public/login.html
+++ b/public/login.html
@@ -19,14 +19,14 @@
 			<label>Email</label>
 			<div class="input-group">
 				<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-				<input type="email" name="email" pattern="[^ @]*@[^ @]*" ng-model="user.email" placeholder="Enter your email" class="form-control" required="true">
+				<input type="email" name="email" pattern="[^ @]*@[^ @]*" ng-model="loginuser.email" placeholder="Enter your email" class="form-control" required="true">
 			</div>	
 		</div>
 		<div class="form-group">
 			<label>Password</label>
 			<div class="input-group">
 				<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-				<input type="password" name="password" ng-model="user.password" placeholder="Enter your password" class="form-control" name="password" required="true">
+				<input type="password" name="password" ng-model="loginuser.password" placeholder="Enter your password" class="form-control" name="password" required="true">
 			</div>
 		</div>
 
