--- a/public/profile.html
+++ b/public/profile.html
@@ -6,7 +6,7 @@
 				<div>
 
 					<div class="image-cropper">
-						<a href="#/imageUpload"><img class="img-hor" src="{{imgURL}}" onerror="this.src='images/bdu_quad.png'" alt=""/></a>
+						<a href="#/imageUpload"><img class="img-hor" ng-src="http://debating.de/BDUDBdev/userpics/{{user.image}}" onerror="this.src='images/bdu_quad.png'"/></a>
 					</div>
 				</div>
 				<div class="intro-text">
