--- a/public/signup.html
+++ b/public/signup.html
@@ -20,21 +20,48 @@
 				<label>Email</label>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-					<input type="email" name="email" pattern="[^ @]*@[^ @]*" ng-model="user.email" placeholder="Enter your email" class="form-control" name="email" required="true">
+					<input type="email" name="email" pattern="[^ @]*@[^ @]*" ng-model="reguser.email" placeholder="Enter your email" class="form-control" name="email" required="true">
 				</div>
 			</div>
 			<div class="form-group">
 				<label>Password</label>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-					<input type="password" ng-model="user.password" placeholder="Enter your password" class="form-control" name="password" id="password1" required="true">
+					<input type="password" ng-model="reguser.password" ng-change="checkMatch()" placeholder="Enter your password" class="form-control" name="password" id="password1" required="true">
 				</div>
 			</div>
 			<div class="form-group">
 				<label>Confirm password</label>
 				<div class="input-group">
 					<span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-					<input type="password" placeholder="Confirm your password" class="form-control" name="password-confirm" id="password2" required="true">
+					<input type="password" ng-model="pwd2" ng-change="checkMatch(); confirmFill = true" placeholder="Confirm your password" class="form-control" name="password-confirm" id="password2" required="true">
+				</div>
+				<p ng-show="!match && confirmFill" class="alert alert-danger">Passwords don't match</p>
+			</div>
+			<div class="form-group">
+				<label>First Name</label>
+				<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-glass"></i></span>
+					<input type="text" ng-model="reguser.vorname" placeholder="First Name" class="form-control" name="Vorname" id="Vorname" required="true">
+				</div>
+			</div>
+			<div class="form-group">
+				<label>Last Name</label>
+				<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-rocket"></i></span>
+					<input type="text" ng-model="reguser.name" placeholder="Last Name" class="form-control" name="Name" id="Name" required="true">
+				</div>
+			</div>
+			<div class="form-group">
+				<label>Gender</label>
+				<div class="input-group">
+					<span class="input-group-addon"><i class="fa fa-circle"></i></span>
+					<select class="form-control" style="height:auto;" ng-model="reguser.gender">
+						<option value=""></option>
+						<option value="f">female</option>
+						<option value="m">male</option>
+						<option value="-">post</option>
+					</select>
 				</div>
 			</div>
 
